--- a/mlgamify-app/index.html
+++ b/mlgamify-app/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/babel">
+    <script src="src/Home.js" type="text/babel">
 
       ReactDOM.render(
         <h1>Hello, world!</h1>,
